syntax = "proto3";

import "global.proto";

package pb;


message ChannelCommand {
  oneof sub_command {
    QCreateChannel CreateChannel = 50;
    QEditChannel EditChannel = 51;
    QDeleteChannel DeleteChannel = 52;
    QFollowChannel FollowChannel = 30;
    QUnFollowChannel UnFollowChannel = 31;
    QSubscribe Subscribe = 40;
    QUnSubscribe UnSubscribe = 41;
    QSendMessage SendMessage = 10;
    QEditMessage EditMessage = 11;
    QDeleteMessages DeleteMessages = 12;
    QLikeMessage LikeMessage = 200;
    QUnLikeMessage UnLikeMessage = 201;
    QReShareMessage ReShareMessage = 300;
    QUnReShareMessage UnReShareMessage = 301;
    QAddComment AddComment = 400;
    QDeleteComment DeleteComment = 401;
    QAvatarAdd AvatarAdd = 80;
    QAvatarDelete AvatarDelete = 81;
  }
  message QCreateChannel {
      uint32 channel_cid = 1;
      uint32 creator_profile_cid = 2;
      string channel_title = 3;
      string user_name = 4;
      string about = 15;
  }
  message QEditChannel {
      uint32 channel_cid = 1;
      uint32 by_profile_cid = 2;
      bool set_new_title = 3;
      string new_title = 4;
      bool set_new_about = 5;
      string new_about = 6;
  }
  message QDeleteChannel {
      uint32 channel_cid = 1;
      uint32 by_profile_cid = 2;
  }
  message QFollowChannel {
      uint32 channel_cid = 1;
      uint32 by_profile_cid = 2;
  }
  message QUnFollowChannel {
      uint32 channel_cid = 1;
      uint32 by_profile_cid = 2;
  }
  message QSubscribe {
      uint32 channel_cid = 1;
      uint32 by_profile_cid = 2;
  }
  message QUnSubscribe {
      uint32 channel_cid = 1;
      uint32 by_profile_cid = 2;
  }
  message QSendMessage {
      uint32 channel_cid = 1;
      NewMessageInput message_input = 2;
  }
  message QEditMessage {
      uint32 channel_cid = 1;
      fixed64 message_gid = 4;
      uint32 by_profile_cid = 3;
      string new_text = 2;
  }
  message QDeleteMessages {
      uint32 channel_cid = 1;
      uint32 by_profile_cid = 2;
      repeated uint64 message_gids = 3;
  }
  message QLikeMessage {
      uint32 channel_cid = 1;
      fixed64 message_gid = 2;
      uint32 by_profile_cid = 3;
  }
  message QUnLikeMessage {
      uint32 channel_cid = 1;
      fixed64 message_gid = 2;
      uint32 by_profile_cid = 3;
      fixed64 like_gid = 4;
  }
  message QReShareMessage {
      uint32 channel_cid = 1;
      fixed64 message_gid = 2;
      uint32 by_profile_cid = 3;
  }
  message QUnReShareMessage {
      uint32 channel_cid = 1;
      fixed64 message_gid = 2;
      uint32 by_profile_cid = 3;
      fixed64 re_share_gid = 4;
  }
  message QAddComment {
      uint32 channel_cid = 1;
      fixed64 message_gid = 2;
      uint32 by_profile_cid = 3;
      string comment_text = 4;
  }
  message QDeleteComment {
      uint32 channel_cid = 1;
      fixed64 message_gid = 2;
      uint32 by_profile_cid = 3;
      fixed64 comment_gid = 4;
  }
  message QAvatarAdd {
      uint32 channel_cid = 1;
      uint64 file_id = 2;
  }
  message QAvatarDelete {
      uint32 channel_cid = 1;
  }
}

message ChatCommand {
  oneof sub_command {
    QSendMessage SendMessage = 10;
    QEditMessage EditMessage = 11;
    QDeleteMessages DeleteMessages = 12;
    QDeleteHistory DeleteHistory = 13;
  }
  message QSendMessage {
      uint32 group_id = 1;
  }
  message QEditMessage {
      uint32 group_id = 1;
  }
  message QDeleteMessages {
      uint32 group_id = 1;
  }
  message QDeleteHistory {
  }
}

message DirectCommand {
  oneof sub_command {
    QChangeTitle ChangeTitle = 10;
    QDeleteDirects DeleteDirects = 50;
  }
  message QChangeTitle {
  }
  message QDeleteDirects {
  }
}

message GroupCommand {
  oneof sub_command {
    QCreateGroup CreateGroup = 40;
    QEditGroup EditGroup = 41;
    QDeleteGroup DeleteGroup = 42;
    QJoinGroup JoinGroup = 50;
    QLeaveGroup LeaveGroup = 51;
    QAddMember AddMember = 52;
    QSendMessage SendMessage = 10;
    QEditMessage EditMessage = 11;
    QDeleteMessages DeleteMessages = 12;
    QDeleteHistory DeleteHistory = 13;
    QPinMessage PinMessage = 600;
    QUnPinMessage UnPinMessage = 601;
    QAvatarAdd AvatarAdd = 80;
    QAvatarDelete AvatarDelete = 81;
    QReportGroup ReportGroup = 82;
  }
  message QCreateGroup {
      uint32 group_cid = 1;
      uint32 creator_profile_cid = 2;
      string group_title = 3;
      bool history_viewable = 8;
      bool force_join = 9;
      bool global_search = 17;
      string about = 15;
      string user_name = 4;
  }
  message QEditGroup {
      uint32 group_cid = 1;
      uint32 by_profile_cid = 2;
      bool set_new_title = 3;
      string new_title = 4;
      bool set_new_about = 5;
      string new_about = 6;
  }
  message QDeleteGroup {
      uint32 group_cid = 1;
      uint32 by_profile_cid = 2;
  }
  message QJoinGroup {
      uint32 group_cid = 1;
      uint32 new_member_profile_cid = 3;
  }
  message QLeaveGroup {
      uint32 group_cid = 1;
      uint32 member_profile_cid = 3;
  }
  message QAddMember {
      uint32 group_cid = 1;
      uint32 by_profile_cid = 2;
      uint32 new_member_profile_cid = 3;
  }
  message QSendMessage {
      uint32 group_id = 1;
      NewMessageInput message_input = 2;
  }
  message QEditMessage {
      uint32 group_id = 1;
      uint32 by_profile_cid = 3;
      string new_text = 2;
  }
  message QDeleteMessages {
      uint32 group_cid = 1;
      uint32 by_profile_cid = 2;
      repeated uint64 message_ids = 3;
  }
  message QDeleteHistory {
  }
  message QPinMessage {
      uint32 group_id = 1;
  }
  message QUnPinMessage {
      uint32 group_id = 1;
  }
  message QAvatarAdd {
      uint32 group_id = 1;
  }
  message QAvatarDelete {
      uint32 group_id = 1;
  }
  message QReportGroup {
  }
}

message ProfileCommand {
  oneof sub_command {
    QSetSettings SetSettings = 10;
  }
  message QSetSettings {
  }
}

message UserCommand {
  oneof sub_command {
    QRegisterUser RegisterUser = 100;
    QEditUser EditUser = 101;
    QDeleteSendCode DeleteSendCode = 800;
    QDeleteConfirmCode DeleteConfirmCode = 801;
    QDeleteUser DeleteUser = 802;
    QChangePhoneNumber ChangePhoneNumber = 300;
    QRemoveSession RemoveSession = 400;
    QRemoveOtherSessions RemoveOtherSessions = 401;
  }
  message QRegisterUser {
      uint32 user_cid = 1;
      string first_name = 2;
      string last_name = 3;
      string phone = 15;
      uint32 created_time = 5;
  }
  message QEditUser {
      uint32 user_cid = 1;
      bool set_new_name = 3;
      string new_first_name = 4;
      string new_last_name = 6;
  }
  message QDeleteSendCode {
      bool Resend = 1;
  }
  message QDeleteConfirmCode {
      string code = 3;
  }
  message QDeleteUser {
  }
  message QChangePhoneNumber {
  }
  message QRemoveSession {
  }
  message QRemoveOtherSessions {
  }
}

